# tc_relay_client

./: CMakeLists.txt  README.md  relay_api.cpp  relay_api.h  relay_apis.h  relay_callbacks.h  relay_client_sdk.cpp  relay_client_sdk.h  relay_client_sdk_param.h  relay_connected_info.h  relay_context.cpp  relay_context.h  relay_device_info.h  relay_errors.h  relay_net_client.h  relay_room.cpp  relay_room.h  relay_server_sdk.cpp  relay_server_sdk.h  relay_server_sdk_param.h  relay_ws_client.cpp  relay_ws_client.h
test/: CMakeLists.txt  test_asio_client.cpp
